--- a/crowsnest.conf
+++ b/crowsnest.conf
@@ -29,7 +29,7 @@
 
 [crowsnest]
 log_path: /home/aspruyt/printer_data/logs/crowsnest.log
-log_level: quiet                        # Valid Options are quiet/verbose/debug
+log_level: verbose                        # Valid Options are quiet/verbose/debug
 delete_log: true                        # Deletes log on every restart, if set to true
 no_proxy: false
 
