--- a/macros/idle-timeout.cfg
+++ b/macros/idle-timeout.cfg
@@ -20,5 +20,5 @@ gcode:
     TEMPERATURE_WAIT SENSOR=heater_bed MAXIMUM=40.0
     DISABLE_ENCLOSURE_FAN
     # Switch off the printer - this causes the enclosure fan to go once klipper is not running and only moonraker
-    POWER_OFF_PRINTER
+    #POWER_OFF_PRINTER
   {% endif %}
