--- a/macros/start-end.cfg
+++ b/macros/start-end.cfg
@@ -16,13 +16,21 @@ gcode:
     M190 S{BED_TEMP}
   {% endif %}
   # Load the bed mesh profile since it is not automatically loaded anymore since 1 Feb 2023
-  BED_MESH_PROFILE LOAD=default
+  #BED_MESH_PROFILE LOAD=default # Rather use KAMP
   # Home the printer
   G28
   # Reset the G-Code Z offset (adjust Z offset if needed)
   SET_GCODE_OFFSET Z=0.0
-  # Purge so printing can start
-  PURGE_BLOB EXTRUDER_TEMP={params.EXTRUDER_TEMP}
+  # KAMP
+  BED_MESH_CALIBRATE
+  SMART_PARK
+  {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200)|float %}
+  # Set and wait for nozzle to reach temperature
+  {% if params.EXTRUDER_TEMP is not none %}
+    M104 S{EXTRUDER_TEMP}
+    M109 S{EXTRUDER_TEMP}
+  {% endif %}
+  LINE_PURGE
 
 [gcode_macro END_PRINT]
 description: Replace the slicer's custom start and end g-code scripts with END_PRINT.
