--- a/moonraker.conf
+++ b/moonraker.conf
@@ -281,10 +281,20 @@ cors_domains:
 
 [include moonraker-power.cfg]
 
+[include moonraker-KAMP.cfg]
+
 [update_manager]
 channel: dev
 refresh_interval: 168
 enable_auto_refresh: False
+
+[update_manager Klipper-Adaptive-Meshing-Purging]
+type: git_repo
+channel: dev
+path: ~/Klipper-Adaptive-Meshing-Purging
+origin: https://github.com/kyleisah/Klipper-Adaptive-Meshing-Purging.git
+managed_services: klipper
+primary_branch: main
 
 [include moonraker-obico-update.cfg]
 
